--- a/main.html
+++ b/main.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="styles.css">
-</head>
-<body id="#grad" style="background-color:powderblue;">
-<div class="container"> 
-    <h1>Nu încă.</h1>
-</div>
 
+<head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body id="grad">
+    <div id="sinImg">
+    </div>
+    <div class="container"> 
+        <h1 id="fontedHarder" style="font-size: 76px; color:#ffffff;">Nu încă.</h1>
+    </div>
+    <div class="footer">
+        <img src="arrow.png" alt="Scroll down image" style="width: 25px; height: 25px;">
+        <h3 id="fonted" style="font-size: 26px; color:#ffffff;">Dă scroll pentru statistici </h3>
+    </div>
 </body>
+
 </html>
