--- a/main.html
+++ b/main.html
@@ -10,21 +10,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body id="grad" class="unscrollable">
-    <div class="firstPage">
-        <div id="sinImg"></div>
-        <div class="container"> 
-            <h1 id="fontedHarder" style="font-size: 76px; color:#ffffff;">Nu încă.</h1>
-        </div>
-        <div class="footer" >
-            <a href="#secondPage">
-                <img src="arrow.png" alt="Scroll down image" style="width: 25px; height: 25px;">
-                <button id="fonted" class="textButton" style="font-size: 26px; color:#ffffff;">Dă scroll pentru statistici </button>
-            </a>
+<body class="unscrollable">
+    <div class="firstPageBg">
+        <div class="firstPage">
+            <div id="sinImg"></div>
+            <div class="container"> 
+                <h1 id="fontedHarder" style="font-size: 76px; color:#ffffff;">Nu încă.</h1>
+            </div>
+            <div class="footer" >
+                <a href="#secondPage">
+                    <img src="arrow.png" alt="Scroll down image" style="width: 25px; height: 25px;">
+                    <button id="fonted" class="textButton" style="font-size: 26px; color:#ffffff;">Dă scroll pentru statistici </button>
+                </a>
+            </div>
         </div>
     </div>
-    <div id="secondPage" class="secondPage">
-        <h1 id="fontedHarder" style="font-size: 76px; color:#ffffff;">Statistici</h1>
+    <div class="secondPageBg">
+        <div id="secondPage" class="secondPage">
+            <h1 id="fontedHarder" style="font-size: 76px;">Statistici</h1>
+        </div>
     </div>
 </body>
 
