--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
         <div class="scrollText" >
             <a href="#secondPage" class="scrollTextLink">
                 <img src="images/arrow.png" alt="Scroll down image" style="width: 25px; height: 25px;">
-                <button class="scrollTextButton" style="font-size: 26px; color:#ffffff; font-weight: 500;">Dă scroll pentru statistici</button>
+                <button class="scrollTextButton">Dă scroll pentru statistici</button>
             </a>
         </div>
     </div>
