special edition sin

--- a/main.html
+++ b/main.html
@@ -15,10 +15,15 @@
 <body class="unscrollable" onload="setInterval(launchConfetti,1000);">
 
     <div class="firstPage">
+		<img class="sinNarghilea" src="images/sin_narghilea.png" alt="narghilea" />
+
         <div class="sinImage"></div>
         <div class="landingTitle"> 
             <h1 style="font-size: 70px; color:#ffffff;">Nu încă.</h1>
         </div>
+		
+		<img class="sinHat" src="images/hat.png" alt="palarie" />
+		
         <div class="scrollText" >
             <a href="#secondPage" class="scrollTextLink">
                 <img src="images/arrow.png" alt="Scroll down image" style="width: 25px; height: 25px;">
